Fix: Text overflow in homepage preview
This issue was caused by the fixed height given for the body, causing the child elements to overflow.

--- a/src/styles/isomer-template.scss
+++ b/src/styles/isomer-template.scss
@@ -9831,12 +9831,11 @@ a.navbar-item.is-active,a.navbar-item:hover,a.navbar-link.is-active,a.navbar-lin
     background: rgba(0,0,0,.25);
     flex-grow: 1;
     flex-shrink: 0;
-    padding: 3rem 1.5rem
+    padding: 3rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
     .bp-hero-body .row {
-        height:391px;
         min-height: 360px
     }
 }
